--- a/survey form/index.html
+++ b/survey form/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="container">
-    <h1 id="title">prachi Coding Camp(TCC) Survey Form</h1>
+    <h1 id="title">prachi patel coding Camp(TCC) Survey Form</h1>
     <p id="description">Thank you for taking the time to help us improve the platform</p>   
  <form id="survey-form">       <form id="name">              <fieldset>         <label  for="name" id="name-label">Name<input type="text" id="name" name="name"  placeholder="Enter your name" required></label>         <label id="email-label">Email <input type="email" id="email"  name="email"placeholder="Enter your Email" required>
          </label>
